--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -26,6 +26,7 @@
     "@openzeppelin/contracts": "^4.8.0",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
     "dotenv": "^16.0.3",
-    "hardhat-contract-sizer": "^2.6.1"
+    "hardhat-contract-sizer": "^2.6.1",
+    "ipfs-http-client": "^59.0.0"
   }
 }
